Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-40000

Flickable delayed press can cause crash

    XMLWordPrintable

Details

    Description

      Looks like the touch event compression change has exposed this bug.

      Program received signal SIGSEGV, Segmentation fault.
      QQuickFlickablePrivate::replayDelayedPress (this=0x2a55c398) at items/qquickflickable.cpp:1370
      1370    items/qquickflickable.cpp: No such file or directory.
      (gdb) bt
      #0  QQuickFlickablePrivate::replayDelayedPress (this=0x2a55c398) at items/qquickflickable.cpp:1370
      #1  0x40cba448 in QObject::event (this=0x2a55a538, e=<optimized out>) at kernel/qobject.cpp:1128
      #2  0x40165414 in QQuickItem::event (this=0x2a55a538, ev=0xbefff23c) at items/qquickitem.cpp:6983
      #3  0x40c82a4c in QCoreApplicationPrivate::notify_helper (this=0x2a011428, receiver=0x2a55a538,
          event=0xbefff23c) at kernel/qcoreapplication.cpp:998
      #4  0x40c82b1c in QCoreApplication::notify (this=<optimized out>, receiver=0x2a55a538,
          event=0xbefff23c) at kernel/qcoreapplication.cpp:943
      #5  0x40c82738 in QCoreApplication::notifyInternal (this=0x2a011130, receiver=<optimized out>,
          event=0xbefff23c) at kernel/qcoreapplication.cpp:881
      #6  0x40cdef3c in sendEvent (event=0xbefff234, receiver=<optimized out>)
          at ../../src/corelib/kernel/qcoreapplication.h:232
      #7  QTimerInfoList::activateTimers (this=0x2a024684) at kernel/qtimerinfo_unix.cpp:643
      #8  0x40cdf508 in timerSourceDispatch (source=<optimized out>)
          at kernel/qeventdispatcher_glib.cpp:185
      #9  timerSourceDispatch (source=<optimized out>) at kernel/qeventdispatcher_glib.cpp:179
      #10 0x41560b20 in g_main_dispatch (context=0x43d02100) at gmain.c:3066
      #11 g_main_context_dispatch (context=0x43d02100) at gmain.c:3642
      #12 0x41560e24 in g_main_context_iterate (context=0x43d02100, block=0, dispatch=1,
          self=<optimized out>) at gmain.c:3713
      #13 0x41560f28 in g_main_context_iterate (self=<optimized out>, dispatch=1, block=0,
          context=0x43d02100) at gmain.c:3680
      #14 g_main_context_iteration (context=0x43d02100, may_block=0) at gmain.c:3774
      #15 0x40cdfcd4 in QEventDispatcherGlib::processEvents (this=0x2a01e330, flags=...)
          at kernel/qeventdispatcher_glib.cpp:432
      #16 0x40c82bcc in QCoreApplication::processEvents (flags=...) at kernel/qcoreapplication.cpp:1053
      #17 0x401718be in QQuickWindowPrivate::flushDelayedTouchEvent (this=0x2a029f28)
          at items/qquickwindow.cpp:1759
      #18 0x401558ac in QSGThreadedRenderLoop::polishAndSync (this=0x2a0327d8, w=0x2a0fed90)
          at scenegraph/qsgthreadedrenderloop.cpp:1107
      #19 0x401564c4 in QSGThreadedRenderLoop::event (this=0x2a0327d8, e=<optimized out>)
          at scenegraph/qsgthreadedrenderloop.cpp:1229
      #20 0x40c82a4c in QCoreApplicationPrivate::notify_helper (this=0x2a011428, receiver=0x2a0327d8,
          event=0xbefff46c) at kernel/qcoreapplication.cpp:998
      #21 0x40c82b1c in QCoreApplication::notify (this=<optimized out>, receiver=0x2a0327d8,
          event=0xbefff46c) at kernel/qcoreapplication.cpp:943
      #22 0x40c82738 in QCoreApplication::notifyInternal (this=0x2a011130, receiver=<optimized out>,
          event=0xbefff46c) at kernel/qcoreapplication.cpp:881
      #23 0x40cdef3c in sendEvent (event=0xbefff464, receiver=<optimized out>)
          at ../../src/corelib/kernel/qcoreapplication.h:232
      #24 QTimerInfoList::activateTimers (this=0x2a024684) at kernel/qtimerinfo_unix.cpp:643
      #25 0x40cdf508 in timerSourceDispatch (source=<optimized out>)
      ---Type <return> to continue, or q <return> to quit---q
      

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            martinj Martin Jones
            martinj Martin Jones
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes